# PDV_RUST_SQLITE

./: .gitignore  BACKUP_INFO.md  DEPLOY.md  POSTGRES_MIGRATION.md  RAILWAY_CHECKLIST.md  README.md  convert_placeholders.sh
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  ensure_user.sh  test_flow.sh
backend/migrations/: 20251209202343_create_users_table.sql  20251209203000_create_plans_table.sql  20251209203001_create_tenants_table.sql  20251209204647_create_products_table.sql  20251209210507_create_sales_tables.sql  20251209221350_create_plans_table.sql  20251209221351_create_tenants_table.sql  20251209223000_create_customers_table.sql  20251209224500_add_customer_id_to_sales.sql  20251209230000_add_business_type_to_tenants.sql  20251209233000_add_reseller_id_to_tenants.sql  20251209235500_fix_fks.sql  20251210000000_add_custom_fields.sql
backend/src/: auth.rs  main.rs  middleware.rs  models.rs
backend/src/handlers/: admin.rs  auth.rs  customers.rs  metrics.rs  mod.rs  products.rs  sales.rs
frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminLayout.tsx  BackofficeLayout.tsx  CustomFieldsForm.tsx  Layout.tsx  MetricCard.tsx
frontend/src/lib/: api.ts  businessTypes.ts
frontend/src/pages/: Customers.tsx  Dashboard.tsx  Login.tsx  POS.tsx  Products.tsx  Register.tsx  Sales.tsx
frontend/src/pages/admin/: Dashboard.tsx  (+4 more)
frontend/src/store/: auth.ts
(+5 files in other folders)
